trunk/Archive2/fe/a1be86db07ca93/output
main.cpp: In function 'int main()':
main.cpp:164:44: error: base operand of '->' has non-pointer type 'Expect<int>::<anonymous class>'
     bool result2 = Expect<int>(3).to->never->be->equal(3);
                                            ^
1
